# RightCut

./: .gitignore  README.md  docker-compose.yml  render.yaml  supabase_schema.sql  supabase_schema_migrate.sql
backend/: Dockerfile  config.py  main.py  models.py  pyproject.toml  requirements.txt
backend/agent/: compaction.py  orchestrator.py  prompts.py  tool_schemas.py  tools.py
backend/excel/: engine.py  formulas.py  serializer.py
backend/parsers/: csv_parser.py  docx_parser.py  pdf_parser.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/.netlify/: state.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ChartView.jsx  ChatPanel.jsx  DocumentView.jsx  HistoryDrawer.jsx  LeftSidebar.jsx  LoginPage.jsx  MessageBubble.jsx  PreviewPanel.jsx  RoleSelectModal.jsx  SpreadsheetView.jsx  StatusBar.jsx  TabBar.jsx  ToolTimeline.jsx
frontend/src/hooks/: useWebSocket.js  useWorkbook.js
frontend/src/lib/: supabase.js
frontend/src/stores/: authStore.js  historyStore.js  themeStore.js  workspaceStore.js
frontend/src/utils/: api.js  sheetSync.js
