[project]
name = "app"
version = "0.1.0"
dependencies = [ "fastapi>=0.111.0", "uvicorn[standard]>=0.30.0", "python-multipart>=0.0.9", "websockets>=12.0", "google-genai>=1.0.0", "openpyxl>=3.1.5", "formulas>=1.3.0", "lxml>=5.0.0", "pypdf>=4.0.0", "pdfplumber>=0.11.0", "python-docx>=1.1.0", "pandas>=2.2.0", "openpyxl>=3.1.5", "pydantic>=2.7.0", "python-dotenv>=1.0.0" ]
requires-python = "~=3.12.0"
